# mus

./: .augment-guidelines  .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GACHI_CATEGORY_AGENT_BRIEF.md  Makefile  Procfile  README.md  ROADMAP.md  implementation_plan.md  package.json  pyproject.toml  requirements.txt  tsconfig.json  yt-dlp.md
.bivvy/: BugF1x-climb.md  BugF1x-moves.json  E4hN-climb.md  E4hN-moves.json  EnvB-moves.json  F4gH-climb.md  F4gH-moves.json  FrR3-climb.md  (+23 more)
backend/: .dockerignore  .gitignore  Cargo.toml  README.md  STATE_MACHINE.md  pyproject.toml  requirements.txt
backend-rs/: Cargo.toml
backend-rs/src/: app.rs  artwork.rs  db.rs  downloads.rs  error.rs  errors.rs  events.rs  gemini.rs  lib.rs  main.rs  media.rs  models.rs  scanner.rs  state.rs  system.rs  tracks.rs  util.rs
backend-rs/tests/: api_contract.rs  media_tags.rs  scanner.rs
backend/scripts/: update_ytdlp.py
backend/src/: app.rs  artwork.rs  db.rs  derived.rs  downloads.rs  errors.rs  events.rs  gemini.rs  hls.rs  lib.rs  main.rs  media.rs  models.rs  player.rs  prewarm.rs  scanner.rs  state.rs  system.rs  tracks.rs  util.rs
backend/src/media/: audio_update.rs
backend/src/mus/: config.py  main.py
backend/src/mus/application/dtos/: __init__.py  monitoring.py  player_state.py  responses.py  scan.py  track.py  track_history.py
backend/src/mus/application/services/: permissions_service.py
backend/src/mus/application/use_cases/: edit_track_use_case.py  fast_initial_scan.py  initial_scan.py  manage_player_state_use_case.py  process_track_metadata.py  scan_tracks_use_case.py  slow_initial_scan.py
backend/src/mus/core/: arq_pool.py  redis.py  streaq_broker.py
backend/src/mus/domain/entities/: player_state.py  track.py  track_history.py
backend/src/mus/domain/services/: gemini_service.py  ollama_service.py  progress_parser.py  title_cleaning_service.py
backend/src/mus/infrastructure/: database.py
backend/src/mus/infrastructure/api/: auth.py  dependencies.py  permissions_singleton.py  schemas.py  sse_handler.py
backend/src/mus/infrastructure/api/middleware/: auth.py
backend/src/mus/infrastructure/api/routers/: __init__.py  album_router.py  artist_router.py  auth_router.py  download_router.py  errors_router.py  history_router.py  monitoring_router.py  permissions_router.py  player_router.py  playlist_router.py  scan_router.py  track_router.py
backend/src/mus/infrastructure/file_watcher/: watcher.py
backend/src/mus/infrastructure/jobs/: download_jobs.py  file_system_jobs.py  metadata_jobs.py  worker.py
backend/src/mus/infrastructure/persistence/: batch_operations.py  sqlite_player_state_repository.py  sqlite_track_history_repository.py  sqlite_track_repository.py
backend/src/mus/infrastructure/scanner/: cover_processor.py  file_system_scanner.py
backend/src/mus/infrastructure/services/: ytdlp_service.py
backend/src/mus/infrastructure/tasks/: background_scanner.py
backend/src/mus/service/: file_watcher_manager.py  file_watcher_service.py  id3_tag_service.py  permissions_service.py  scanner_service.py  worker_tasks.py
backend/src/mus/util/: db_operation_utils.py  db_utils.py  ffprobe_analyzer.py  file_validation.py  filename_utils.py  memory.py  metadata_extractor.py  queue_utils.py  redis_utils.py  track_dto_utils.py
backend/tests/: api_contract.rs  conftest.py  media_tags.rs  scanner.rs  test_auth.py  test_auth_router.py  test_dotenv_integration.py  test_environment_variables.py  test_main_cors.py  test_main_startup.py  test_root.py  test_ytdlp_service.py
backend/tests/api/: test_download_jobs.py  test_download_router.py  test_history_api.py  test_monitoring_api.py  test_player_state_api.py  test_scan_api.py  test_sse_handler.py  test_track_api.py
backend/tests/application/: test_edit_track_use_case_mtime.py  test_manage_player_state_use_case.py  test_scan_tracks_use_case.py
backend/tests/domain/: test_gemini_service.py  test_ollama_service.py  test_progress_parser.py  test_title_cleaning_service.py
backend/tests/infrastructure/: test_cover_processor.py  test_enhanced_cover_processor.py  test_file_system_scanner.py  test_scan_router.py  test_track_router.py
backend/tests/infrastructure/tasks/: test_background_scanner.py
backend/tests/persistence/: test_sqlite_player_state_repository.py  test_sqlite_track_history_repository.py  test_sqlite_track_repository.py
backend/tests/service/: test_id3_tag_service.py
backend/tests/util/: test_metadata_extractor.py  test_redis_utils.py
(+334 files in other folders)
