[project]
name = "mus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.12",
  "sqlmodel>=0.0.24",
  "uvicorn[standard]>=0.34.2",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "fakeredis>=2.25.1",
  "httpx>=0.28.1",
  "aiosqlite>=0.21.0",
  "greenlet>=3.2.1",
  "pyvips>=3.0.0",
  "mutagen>=1.47.0",
  "python-dotenv>=1.1.0",
  "pytest-env>=1.1.5",
  "ruff>=0.11.13",
  "streaq>=0.1.0",
  "redis>=4.4.0",
  "watchfiles>=0.21.0",
  "ffmpeg-python>=0.2.0",
  "vulture>=2.14",
  "bandit>=1.8.5",
  "python-multipart>=0.0.20",
  "yt-dlp>=2025.7.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
env = ["APP_ENV=test", "DATA_DIR_PATH=./test_data"]
# DeprecationWarning:
# 🚨 You probably want to use `session.exec()` instead of `session.execute()`.
filterwarnings = ["ignore::DeprecationWarning"]
